--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,15 +13,25 @@
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
         <activity
-                android:name=".MainActivity"
-                android:configChanges="orientation"
-                android:windowSoftInputMode="adjustResize"
-                android:label="@string/app_name">
+                android:name=".ui.SplashActivity"
+                android:theme="@style/SplashTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
+        </activity>
+
+        <activity
+                android:name=".ui.auth._activity.AuthActivity"
+                android:configChanges="orientation">
+        </activity>
+
+        <activity
+                android:name=".ui.main._activity.MainActivity"
+                android:configChanges="orientation"
+                android:label="@string/app_name"
+                android:windowSoftInputMode="adjustResize">
         </activity>
     </application>
 
