--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,15 +6,21 @@ apply plugin: 'kotlin-android-extensions'
 
 apply plugin: 'kotlin-kapt'
 
+
 android {
     compileSdkVersion 28
     defaultConfig {
         applicationId "com.ayratis.abstractapp"
-        minSdkVersion 19
+        minSdkVersion 21
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        buildConfigField(
+                "String",
+                "SERVER_PATH",
+                "\"https://api.github.com/\""
+        )
     }
 
     dataBinding {
@@ -33,7 +39,7 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.0.2'
-    implementation 'androidx.core:core-ktx:1.0.1'
+    implementation 'androidx.core:core-ktx:1.0.2'
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.vectordrawable:vectordrawable:1.0.1'
@@ -43,8 +49,8 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
 
 //    lifecycle
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0-alpha04'
-    annotationProcessor 'androidx.lifecycle:lifecycle-compiler:2.1.0-alpha04'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0-alpha01'
+    annotationProcessor 'androidx.lifecycle:lifecycle-compiler:2.2.0-alpha01'
 
 //    dagger
     implementation "com.google.dagger:dagger:2.21"
@@ -52,10 +58,11 @@ dependencies {
     kapt 'com.google.dagger:dagger-android-processor:2.16'
 
 //    network
-    implementation 'com.squareup.retrofit2:retrofit:2.5.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
-    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.5.0'
-    implementation 'com.squareup.retrofit2:converter-moshi:2.5.0'
+    def retrofit_version = "2.5.0"
+    implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
+    implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
+    implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofit_version"
+    implementation "com.squareup.retrofit2:converter-moshi:$retrofit_version"
     implementation 'com.squareup.okhttp3:logging-interceptor:3.12.1'
 
 //    rx
@@ -63,8 +70,8 @@ dependencies {
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
 
 //    navigation
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.1.0-alpha02'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.1.0-alpha02'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.1.0-alpha04'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.1.0-alpha04'
 
 //    glide
     implementation 'com.github.bumptech.glide:glide:4.9.0'
@@ -74,9 +81,25 @@ dependencies {
     implementation 'android.arch.paging:runtime:1.0.1'
 
 //    room
-    def room_version = "2.1.0-alpha07"
+    def room_version = "2.1.0-beta01"
     implementation "androidx.room:room-runtime:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
     implementation "androidx.room:room-rxjava2:$room_version"
     testImplementation "androidx.room:room-testing:$room_version"
+
+//    imageCropper
+    implementation 'com.github.yalantis:ucrop:2.2.3'
+
+    implementation 'com.theartofdev.edmodo:android-image-cropper:2.8.0'
+
+    implementation 'com.google.firebase:firebase-core:16.0.9'
+    implementation 'com.google.firebase:firebase-messaging:18.0.0'
+
+    implementation "android.arch.work:work-runtime:1.0.1"
+
+    //for delete
+    implementation 'org.altbeacon:android-beacon-library:2.16.2'
+
 }
+
+apply plugin: 'com.google.gms.google-services'
