--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+          xmlns:tools="http://schemas.android.com/tools"
           package="com.ayratis.abstractapp">
 
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.CAMERA" />
 
     <application
             android:name=".App"
@@ -11,28 +13,46 @@
             android:label="@string/app_name"
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
-            android:theme="@style/AppTheme">
+            android:theme="@style/AppTheme"
+            tools:ignore="GoogleAppIndexingWarning">
+
         <activity
-                android:name=".ui.SplashActivity"
-                android:theme="@style/SplashTheme">
+                android:name=".ui.MainActivity"
+                android:configChanges="orientation"
+                android:theme="@style/AppTheme.Launcher"
+                android:label="@string/app_name"
+                android:windowSoftInputMode="adjustResize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
+            <nav-graph android:value="@navigation/notifications" />
         </activity>
 
         <activity
-                android:name=".ui.auth._activity.AuthActivity"
-                android:configChanges="orientation">
-        </activity>
+                android:name="com.yalantis.ucrop.UCropActivity"
+                android:screenOrientation="portrait"
+                android:theme="@style/Theme.AppCompat.Light.NoActionBar"/>
 
-        <activity
-                android:name=".ui.main._activity.MainActivity"
-                android:configChanges="orientation"
-                android:label="@string/app_name"
-                android:windowSoftInputMode="adjustResize">
-        </activity>
+        <provider
+                android:authorities="${applicationId}.fileprovider"
+                android:name="androidx.core.content.FileProvider"
+                android:exported="false"
+                android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths"/>
+        </provider>
+
+        <service
+                android:name="com.ayratis.abstractapp.service.MyFirebaseMessagingService"
+                android:exported="false">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
+        </service>
+
     </application>
 
 </manifest>
